--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <p>
           #웹페이지 제작하기 #자기소개서 #멘붕 🇰🇷🇰🇷
         </p><br>
-        <a href="./web.html" target="_blank">게시물 보기</a>
+        <a href="./web.html" target="_blank">
+         <span style="color: blue;">게시물 보기</span> 
+        </a>
           
       </div>
 
